--- a/src/components/ENTRY/entry.css
+++ b/src/components/ENTRY/entry.css
@@ -26,8 +26,9 @@ body {
   }
   .first-page-logo {
     height: 200px;
+    margin-top: 100px;
     width: 400px;
-    animation: delayEntry 2s ease-in-out 2s forwards;
+    animation: delayEntry 2s ease-in-out 0.2s forwards;
   }
   .first-page-image {
     text-align: center;
