--- a/src/components/ENTRY/entry.scss
+++ b/src/components/ENTRY/entry.scss
@@ -32,8 +32,9 @@ body{
     .first-page-logo{
         // border:2px solid;
         height:200px;
+        margin-top: 100px;
         width:400px;
-        animation:delayEntry 2s ease-in-out 2s forwards ;
+        animation:delayEntry 2s ease-in-out .2s forwards ;
     }
     .first-page-image{
         text-align: center;
