--- a/src/components/SignupPage/Signup.scss
+++ b/src/components/SignupPage/Signup.scss
@@ -41,6 +41,34 @@
         color: #7109b6;
         font-weight: 700;
     }
+    .signup-text{
+        height: 30px;
+        width:50%;
+        border-radius:5px;
+        border:0;
+        outline: none;
+        background-color: #eee;
+        color:#7109b6;
+        margin-right:5px;
+        padding:0px;
+    }
+    .signup-select{
+        height: 30px;
+        width: 50%;
+        outline: none;
+        border:0;
+        background-color: #eee;
+        padding:4px;
+        border-radius:5px;
+    }
+    .signup-description{
+        width:100%;
+        height:80px;
+        background-color: #eee;
+        outline:none;
+        border:0;
+        border-radius:5px;
+    }
 
 
     
