--- a/src/components/SignupPage/Signup.css
+++ b/src/components/SignupPage/Signup.css
@@ -38,7 +38,7 @@
     font-weight: 700;
   }
   .signup-text {
-    height: 30px;
+    height: 45px;
     width: 50%;
     border-radius: 5px;
     border: 0;
@@ -49,13 +49,14 @@
     padding: 0px;
   }
   .signup-select {
-    height: 30px;
+    height: 45px;
     width: 50%;
     outline: none;
     border: 0;
     background-color: #eee;
     padding: 4px;
     border-radius: 5px;
+    color: grey;
   }
   .signup-description {
     width: 100%;
@@ -64,5 +65,13 @@
     outline: none;
     border: 0;
     border-radius: 5px;
+  }
+  ::-moz-placeholder {
+    text-align: left;
+    text-indent: 10px;
+  }
+  ::placeholder {
+    text-align: left;
+    text-indent: 10px;
   }
 }/*# sourceMappingURL=Signup.css.map */
